--- a/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
+++ b/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
@@ -1,7 +1,7 @@
 .myworks{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 72vh;
     justify-content: center;
 }
 .myworks-inner{
