--- a/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
+++ b/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-top: 3rem;
+    padding-bottom: 5rem;
 }
 .proj-inner{
     display: flex;
