--- a/portfolio/src/Pages/Homepage/Homepage.css
+++ b/portfolio/src/Pages/Homepage/Homepage.css
@@ -1,3 +1,20 @@
 .homepage{
   background-color: #3A3A3A;
+  position: relative;
+}
+.scroll-to-top{
+  position: fixed;
+  bottom: .5rem;
+  right: 0.5rem;
+  background-color: #ff0000;
+  padding: 1rem 0.3rem;
+  border-radius: 50%;
+}
+.scroll-to-top a{
+  color: #fff;
+  font-size: 1.5rem;
+  background-color: #3b0909;
+  padding: 0.7rem 1.3rem;
+  border-radius: 50%;
+  text-decoration: none;
 }
