--- a/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
+++ b/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
@@ -13,8 +13,24 @@
 .landing-left{
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 50%;
+    flex-direction: column;
+    gap: 2rem;
+    padding-top: 9rem;
+}
+.landing-left a{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    cursor: pointer;
+    color: #FF4F4F;
+    border: 5px solid #FF4F4F;
+    filter: drop-shadow(7px 7px 25px rgba(0, 0, 0, 0.25));
+    border-radius: 10px;
+    display: flex;
+    width: 180px;
+    justify-content: center;
 }
 .introduction{
     font-family: 'Montserrat';
