--- a/portfolio/src/Pages/Homepage/Components/Navbar/Navbar.css
+++ b/portfolio/src/Pages/Homepage/Components/Navbar/Navbar.css
@@ -143,3 +143,36 @@
     transition: all 400ms ease;
   }
 }
+
+
+@media screen and (min-width: 425px){
+  
+}
+@media screen and (min-width: 768px){
+  .header-logo img {
+    width: 62px;
+    height: 54px;
+  }
+  .header-wrapper.active .nav-items ul{
+    padding-top: 10rem;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1024px){
+  .nav-links{
+    font-size: 18px;
+  }
+  .header-logo{
+    height: 80%;
+  }
+}
+@media screen and (min-width: 1440px){
+  .nav-items ul{
+    gap: 2rem;
+  }
+}
+@media screen and (min-width: 2560px){
+  .nav-links{
+    font-size: 32px;
+  }
+}
