--- a/portfolio/src/Pages/Homepage/Components/About/About.css
+++ b/portfolio/src/Pages/Homepage/Components/About/About.css
@@ -33,3 +33,55 @@
   background-color: #ff4f4f;
   margin-top: 1rem;
 }
+
+@media screen and (min-width: 425px) and (max-width: 768px){
+  .about-heading{
+    font-size: 40px;
+  }
+  .about-text{
+    font-size: 20px;
+  }
+  .about-line{
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .about-heading{
+    font-size: 50px;
+  }
+  .about-text{
+    font-size: 26px;
+  }
+  .about-line{
+    display: none;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1440px){
+  .about-heading{
+    font-size: 60px;
+  }
+  .about-text{
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 1440px) and (max-width: 2560px){
+  .about-heading{
+    font-size: 60px;
+  }
+  .about-text{
+    font-size: 34px;
+  }
+}
+@media screen and (min-width: 2560px) {
+  .about-heading{
+    font-size: 112px;
+  }
+  .about-line{
+    height: 5px;
+  }
+  .about-text{
+    font-size: 34px;
+    word-spacing: 5px;
+    text-align: justify;
+  }
+}
