--- a/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
+++ b/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
@@ -1,8 +1,8 @@
 .myworks{
     display: flex;
     width: 100%;
-    height: 72vh;
     justify-content: center;
+    margin-bottom: 8rem;
 }
 .myworks-inner{
     display: flex;
@@ -23,4 +23,38 @@
     margin-left: 2rem;
     margin-right: 2rem;
     margin-top: 2rem;
+    justify-content: center;
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px){
+    .myworks-heading{
+        font-size: 40px;
+    }
+    .myworks{
+        margin-bottom: 5rem;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px){
+    .myworks-heading{
+        font-size: 50px;
+    }
+    .myworks{
+        margin-bottom: 5rem;
+    }
+}
+@media screen and (min-width: 1440px) and (max-width: 2560px){
+    .myworks-heading{
+        font-size: 60px;
+    }
+    .myworks{
+        margin-bottom: 5rem;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .myworks-heading{
+        font-size: 112px;
+    }
+    .myworks{
+        height: 100%;
+    }
 }
