--- a/portfolio/src/Pages/Homepage/Components/Projects/Cards/PCard.css
+++ b/portfolio/src/Pages/Homepage/Components/Projects/Cards/PCard.css
@@ -5,5 +5,34 @@
     margin-top: 1rem;
 }
 .p-card-title a{
-    font-size: 2rem !important;
+    font-size: 1.5rem !important;
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px){
+    .p-card{
+        height: calc(35vw*0.8)!important;
+    }
+    .p-card-title a{
+        font-size: 1rem !important;
+    }
+}
+@media screen and (min-width: 1024px) and (max-width: 1440px){
+    .p-card-title a{
+        font-size: 1.1rem !important;
+    }
+}
+@media screen and (min-width: 1024px) and (max-width: 1440px){
+    .p-card-title a{
+        font-size: 1.5rem !important;
+    }
+}
+@media screen and (min-width: 1440px) and (max-width: 2560px){
+    .p-card-title a{
+        font-size: 2.5rem !important;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .p-card-title a{
+        font-size: 3rem !important;
+    }
 }
