--- a/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
+++ b/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
@@ -17,3 +17,19 @@
     font-size: 60px;
     color:  white;
 }
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+    .proj-head{
+        font-size: 40px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .proj-head{
+        font-size: 50px;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .proj-head{
+        font-size: 112px;
+    }
+}
