--- a/portfolio/src/Pages/Homepage/Components/TechStack/TechStack.css
+++ b/portfolio/src/Pages/Homepage/Components/TechStack/TechStack.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 .tech-stack-inner{
     width: 90vw;
@@ -13,6 +14,18 @@
     font-size: 60px;
     color: white;
 }
-.mts-carousel{
-    height: 55vh;
+@media screen and (min-width: 425px) and (max-width: 768px) {
+    .tech-stack-heading{
+        font-size: 40px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .tech-stack-heading{
+        font-size: 50px;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .tech-stack-heading{
+        font-size: 112px;
+    }
 }
