--- a/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
+++ b/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
@@ -65,6 +65,39 @@
     top: 20rem;
     right: -3rem;
 }
+@media screen and (max-width: 425px){
+    .landing{
+        height: 93vh;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+    .landing-inner{
+        flex-direction: column;
+        margin: 0;
+        height: 70vh;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+    .landing-left{
+        width: 100%;
+        padding: 0;
+        padding-bottom: 2rem;
+    }
+    .landing-right{
+        width: 100%;
+    }
+    .socials-landing{
+        top: -8rem;
+        right: 0rem;
+    }
+    .introduction{
+        font-size: 24px;
+    }
+    .introduction span{
+        font-size: 52px;
+    }
+}
 @media screen and (min-width: 425px) and (max-width: 768px){
     .landing-inner{
         flex-direction: column-reverse;   
