--- a/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
+++ b/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
@@ -26,6 +26,15 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 425px){
+    .myworks-heading{
+        font-size: 40px;
+    }
+    .myworks{
+        margin-bottom: 5rem;
+        margin-top: 5rem;
+    }
+}
 @media screen and (min-width: 425px) and (max-width: 768px){
     .myworks-heading{
         font-size: 40px;
