--- a/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
+++ b/portfolio/src/Pages/Homepage/Components/Projects/Projects.css
@@ -18,6 +18,11 @@
     color:  white;
 }
 
+@media screen and (max-width: 425px){
+    .proj-head{
+        font-size: 40px;
+    }
+}
 @media screen and (min-width: 425px) and (max-width: 768px) {
     .proj-head{
         font-size: 40px;
