--- a/portfolio/src/Pages/Homepage/Components/Socials/Socials.css
+++ b/portfolio/src/Pages/Homepage/Components/Socials/Socials.css
@@ -38,6 +38,14 @@
     }
 }
 
+@media screen and (max-width: 425px){
+    .socials span {
+        display: none;
+    }
+    .socials ul li a img{
+        width: 1.5rem;
+    }
+}
 @media screen and (min-width: 425px) and (max-width: 768px){
     .socials span {
         display: none;
