--- a/portfolio/src/Pages/Homepage/Components/TechStack/TechStack.css
+++ b/portfolio/src/Pages/Homepage/Components/TechStack/TechStack.css
@@ -14,6 +14,11 @@
     font-size: 60px;
     color: white;
 }
+@media screen and (max-width: 425px){
+    .tech-stack-heading{
+        font-size: 40px;
+    }
+}
 @media screen and (min-width: 425px) and (max-width: 768px) {
     .tech-stack-heading{
         font-size: 40px;
