Contact Form Enabled

--- a/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
+++ b/portfolio/src/Pages/Homepage/Components/Landing/Landing.css
@@ -65,6 +65,9 @@
     top: 20rem;
     right: -3rem;
 }
+.mayank{
+    pointer-events: none;
+}
 @media screen and (max-width: 425px){
     .landing{
         height: 93vh;
