--- a/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
+++ b/portfolio/src/Pages/Homepage/Components/MyWorks/MyWorks.css
@@ -23,7 +23,7 @@
     margin-left: 2rem;
     margin-right: 2rem;
     margin-top: 2rem;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 @media screen and (max-width: 425px){
